--- a/polls/discord/index.html
+++ b/polls/discord/index.html
@@ -151,7 +151,7 @@
             const discordPollValues = getFromLocalStorage();
 
             if (!discordPollValues || !discordPollValues.token || !discordPollValues.channel || !discordPollValues.ping) {
-                alert('Please provide valid URL parameters for token, channel, and ping.');
+                alert('Please provide valid URL parameters for "token", "channel", and "ping".');
                 return;
             }
 
