--- a/polls/discord/index.html
+++ b/polls/discord/index.html
@@ -204,7 +204,7 @@
 
             // Create the poll structure
             const pollData = {
-                content: `<@${ping}>`,  // Mention user with ping
+                content: `<@${ping}>`,  // Mention with ping
                 tts: false,
                 flags: 0,
                 poll: {
