--- a/main/assets/counts/graph/index.html
+++ b/main/assets/counts/graph/index.html
@@ -1,5 +1,6 @@
 <link id="font" href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800&display=swap" rel="stylesheet">
 <link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
+<script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/highstock.js"></script>
 <script src="https://lcedit.com/odometer/odometer.js"></script>
 
 <body>
