--- a/main/assets/counts/graph/index.html
+++ b/main/assets/counts/graph/index.html
@@ -146,7 +146,7 @@ if (est === 1) {
                 }
             },
             lineColor: textBright,
-            minorGridLineColor: '#bdbdbd',
+            minorGridLineColor: textBright,
             tickColor: textBright,
             title: {
                 style: {
@@ -165,7 +165,7 @@ if (est === 1) {
                 }
             },
             lineColor: textBright,
-            minorGridLineColor: '#bdbdbd',
+            minorGridLineColor: textBright,
             tickColor: textBright
         },
         credits: {
@@ -174,11 +174,11 @@ if (est === 1) {
  
         series: [{
             showInLegend: false,
-            name: 'Subscribers',
+            name: 'Count',
             marker: {
                 enabled: false
             },
-            color: '#000000',
+            color: textBright,
             lineColor: lineColor
         }]
     });
