--- a/main/assets/counts/graph/index.html
+++ b/main/assets/counts/graph/index.html
@@ -119,7 +119,7 @@ if (est === 1) {
     }, 2000);
  
     if (axis === false) {
-    var textBright = "transparent"
+    var textBright = 'transparent'
     } else {
     var textBright = axis
     }
