--- a/main/assets/counts/hexagonworldpopedit.html
+++ b/main/assets/counts/hexagonworldpopedit.html
@@ -50,7 +50,7 @@
                 <img class="avatar" src="https://lcedit.com/default.png" id="counter-avatar">
                 <div class="counter-title" id="counter-title">Username</div>
                 <div class="counter-container">
-                    <div class="counter odometer" id="counter-counter">0</div>
+                    <div class="counter odometer" id="counter-counter">0</div><br>
                     <div class="counter odometer" id="counter-gap">0</div>
                 </div>
                 <div class="footer" id="counter-footer">Followers</div>
