--- a/main/assets/counts/hexagonworldpopedit.html
+++ b/main/assets/counts/hexagonworldpopedit.html
@@ -70,5 +70,11 @@
     <script src="https://lcedit.com/bootstrap.js"></script>
     <script src="https://lcedit.com/counter.js"></script>
     <script src="https://lcedit.com/livecountsedit/lcedit.js"></script>
+    <script>
+        setInterval(() => {
+            fetch("")
+            
+        });
+    </script>
 </body>
 </html>
