--- a/main/assets/counts/hexagonworldpopedit.html
+++ b/main/assets/counts/hexagonworldpopedit.html
@@ -69,7 +69,7 @@
     <script src="https://lcedit.com/drawMenu.js"></script>
     <script src="https://lcedit.com/bootstrap.js"></script>
     <script src="https://lcedit.com/counter.js"></script>
-    <script src="https://lcedit.com/livecountsedit/lcedit.js"></script>
+    <script src="./lcedit.js"></script>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         var id = urlParams.get("id") || "UCX6OQ3DkcsbYNE6H8uQQuVA";
