--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
 <body>
     <div class="container">
         <h1>404</h1>
-        <p>Redesign soon, old urls will still work.</p>
-        <a href="./">Home</a>
+        <p>Oops! You went to an invalid HuntingStats378 url. 💀</p>
+        <a href="../">Home</a>
     </div>
 </body>
 </html>
