--- a/livecounts/subscribers/combined/huntingstats378/nia/index.html
+++ b/livecounts/subscribers/combined/huntingstats378/nia/index.html
@@ -48,8 +48,7 @@
   await fetch(`https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${Channels[i]}`)
             .then((res) => res.json())
             .then((data) => {
-              work[i] = data.channels.counts[2].count || 0;
-
+              work[i] = (data.success !== false && data.channels?.counts?.[2]?.count) || 0;
             });
         }
         Promise.resolve()
