--- a/livecounts/subscribers/combined/huntingstats378/nia/index.html
+++ b/livecounts/subscribers/combined/huntingstats378/nia/index.html
@@ -12,8 +12,8 @@
 <body style="font-family: Roboto; color: var(--fg-color, #fff); background-color: var(--bg-color, #E7541E);">
     <div style="height: auto; display: grid; grid-template-columns: repeat(1, 1fr); gap: 10px;">
         <div style="padding: 0px 4px; text-align: center; background-color: var(--counter-bg-color, black);">
-            <img style="filter: blur(4px); border-radius: 15px; object-fit: cover; width: 100%; height: 150px; position: relative;" src="https://www.banner.yt/UClOyuxZvQkoHoIn15kNbkUw">
-            <img style="width: 125px; height: 125px; border-radius: 50%; margin-top: -5em; position: relative;" src="https://yt3.ggpht.com/zZa5_LIZoT_2TqhiNdterb2GFv7oZEI7QcgAJeLeD7_4aHVJZ1VZXciJ_ouplogGy_x-T6VrYw=s176-c-k-c0x00ffffff-no-rj">
+            <img style="filter: blur(4px); border-radius: 15px; object-fit: cover; width: 100%; height: 150px; position: relative;" src="https://www.banner.tf/UClOyuxZvQkoHoIn15kNbkUw">
+            <img style="width: 125px; height: 125px; border-radius: 50%; margin-top: -5em; position: relative;" src="https://www.banner.tf/UClOyuxZvQkoHoIn15kNbkUw/avatar">
             <h2 style="margin-top: 1px; font-size: var(--title-font-size, 4.5vh)">HuntingStats378 Combined</h2>
             <h2 id="subs" style="margin-top: -20px; font-size: var(--counter-font-size, 8vh)" class="odometer">0</h2>
             <h5 onclick="footer()" style="margin-top: -40px;">Subscribers (YT Studio)</h5>
