--- a/main/assets/counts/index.html
+++ b/main/assets/counts/index.html
@@ -68,6 +68,7 @@ var format = urlParams.get("format") || 0;
 var clock = urlParams.get("clock") || false;
 var duration = urlParams.get("duration") || 2;
 var est = urlParams.get("est") || 0;
+var goal = urlParams.get("goal") || 0;
 
 // Validate and handle font size
 function validateSize(input) {
