--- a/streams/mbt1b/side.html
+++ b/streams/mbt1b/side.html
@@ -15,17 +15,22 @@
 <body class="flex">
     <div class="flex">
         <span class="material-icons"> hourglass_full </span>
-        <span class="text">MIN:</span>
+        <span class="text">Views:</span>
         <span id="min">0</span>
     </div>
     <div class="flex">
         <span class="material-icons"> hourglass_full </span>
-        <span class="text">HR:</span>
+        <span class="text">Likes:</span>
         <span id="hr">0</span>
     </div>
     <div class="flex">
         <span class="material-icons"> hourglass_full </span>
-        <span class="text">DAY:</span>
+        <span class="text">Comments:</span>
+        <span id="day">0</span>
+    </div>
+    <div class="flex">
+        <span class="material-icons"> hourglass_full </span>
+        <span class="text">Uploads:</span>
         <span id="day">0</span>
     </div>
 </body>
