--- a/streams/mbt1b/side.html
+++ b/streams/mbt1b/side.html
@@ -14,17 +14,17 @@
 
 <body class="flex">
     <div class="flex">
-        <span class="material-icons"> hourglass_full </span>
+        <span class="material-icons"> <iconify-icon icon="bi:eye-fill"></iconify-icon> </span>
         <span class="text">Views:</span>
         <span id="min">0</span>
     </div>
     <div class="flex">
-        <span class="material-icons"> hourglass_full </span>
+        <span class="material-icons"> <iconify-icon icon="bxs:like"></iconify-icon> </span>
         <span class="text">Likes:</span>
         <span id="hr">0</span>
     </div>
     <div class="flex">
-        <span class="material-icons"> hourglass_full </span>
+        <span class="material-icons"> <iconify-icon icon="fa-solid:comment-dots"></iconify-icon> </span>
         <span class="text">Comments:</span>
         <span id="day">0</span>
     </div>
