--- a/streams/mbt1b/side.html
+++ b/streams/mbt1b/side.html
@@ -82,6 +82,7 @@
   let myVariable1 = 0;
   let myVariable2 = 0;
   let myVariable3 = 0;
+  let myVariable4 = 0;
   let incrementAmount1 = 0;
   let incrementAmount2 = 0;
   let incrementAmount3 = 0;
@@ -99,6 +100,8 @@
     }
     odometers[0].options = opts;
     odometers[1].options = opts;
+    odometers[2].options = opts;
+    odometers[3].options = opts;
     
   fetch(`https://api.communitrics.com/combined-history?recent=true`)
   .then((res) => res.json())
@@ -128,7 +131,7 @@
               const cl0 = lastTime.comments;
               const tl0 = (new Date(lastTime.time).getTime() / 1000);
 
-              const myVariable4 = lastItem.uploadCount;
+              myVariable4 = lastItem.uploadCount;
 
              if ((Math.floor(new Date().getTime() / 1000) * 1000) - (Math.floor(new Date(lastItem.time).getTime() / 1000) * 1000) < 12000) {
                  myVariable1 = vc0;
