--- a/streams/mbt1b/side.html
+++ b/streams/mbt1b/side.html
@@ -111,6 +111,7 @@
           myVariable1 = lastItemLol.views;
       myVariable2 = lastItemLol.likes;
       myVariable3 = lastItemLol.comments;
+      myVariable4 = lastItemLol.uploadCount;
       });
 
   // Function to fetch data and update the increment amount
