--- a/streams/mbt1b/side.html
+++ b/streams/mbt1b/side.html
@@ -30,7 +30,7 @@
         <span class="odometer" id="comments">0</span>
     </div>
     <div class="flex">
-        <span class="material-icons"><iconify-icon icon="fa-solid:comment-dots"></iconify-icon></span>
+        <span class="material-icons"><iconify-icon icon="mdi:upload-box"></iconify-icon></span>
         <span class="text"> Uploads:</span>
         <span class="odometer" id="uploads">0</span>
     </div>
