--- a/streams/mbt1b/video.html
+++ b/streams/mbt1b/video.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Latest Video</title>
-    <link rel="stylesheet" href="https://huntingstats378.github.io/HuntingStats378/main/assets/ess//odometer.css" />
-    <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess//odometer.js"></script>
+    <link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
+    <script src="https://lcedit.com/odometer/odometer.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <style>
