--- a/streams/mbt1b/video.html
+++ b/streams/mbt1b/video.html
@@ -146,6 +146,20 @@
         const params = new URLSearchParams(window.location.search);
         const id = params.get("id") || "UCX6OQ3DkcsbYNE6H8uQQuVA";
 
+        odometers = Odometer.init();
+    let opts = {
+        animation: ['default', 'byDigit', 'count', 'minimal'][1],
+        downColor: "white",
+        duration: 2 * 1000,
+        removeLeadingZeros: true,
+        reverseAnimation: false,
+        format: ",ddd",
+        upColor: "white"
+    }
+    odometers[0].options = opts;
+    odometers[1].options = opts;
+    odometers[2].options = opts;
+
         setInterval(() => {
             fetch(
                     `https://axern.space/api/get?platform=youtube&type=video&id=${id}`
